# selenium_mcp_server

./: .gitignore  .mcp.json  CHANGES_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_INSTALLATION.md  CURSOR_INSTALLATION.md  DEPLOYMENT_GUIDE.md  ELECTRON_APP_IMPLEMENTATION_PLAN.md  FINAL_CHANGES_SUMMARY.md  FRAMEWORK_STANDARDS.md  INSTALLATION_GUIDE.md  INSTALLATION_SUMMARY.md  MANIFEST.in  MCP_CLIENT_SETUP.md  PUBLISHING_GUIDE.md  README.md  TYPESCRIPT_MIGRATION_PLAN.md  WORKFLOW_DIAGRAM.md  cursor_debug_config.json  cursor_mcp_config.json  debug_snapshot.py  demo_usage.md  install.py  install_in_cursor.sh  login_test.py  mcp_server.py  mcp_server_debug.py  pyproject.toml  requirements.txt  setup.py  shopping_app_test_cases.md  test_cursor_config.json  test_mcp_direct.py  test_minimal_mcp.py  test_navigation.py  test_server.py  test_shopping_filters.robot  test_yaml_snapshot.py
.github/workflows/: build-test.yml  publish-npm.yml  publish-python.yml  publish-test-python.yml  release.yml
agents/: selenium-regression-analyzer.agent.md  selenium-test-generator.agent.md  selenium-test-healer.agent.md  selenium-test-planner.agent.md
docs/: AGENT_WORKFLOW.md  FINAL_CHANGES_SUMMARY.md  FRAMEWORK_STANDARDS.md  INSTALLATION_GUIDE.md  INSTALLATION_SUMMARY.md  MCP_CLIENT_SETUP.md
domain_templates/: e-commerce.yaml
mcp_selenium_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
npm-wrapper/: .npmignore  PUBLISHING.md  README.md  SUMMARY.md  index.js  package.json  test.js
npm-wrapper/scripts/: install-python-server.js
practiceautomatedtesting/: README.md  conftest.py  pytest.ini  requirements.txt  test_plan.md  test_shopping_complete.py  test_web_elements.py  wdio.conf.js
product-discovery/practice-automated-testing/: discovery-summary.yaml  product-discovery.html  product-discovery.md
risk-profiles/: practiceautomatedtesting-risk-profile.yaml
selenium-mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
selenium-mcp-server/src/: context.ts  index.ts  server.ts  types.ts
selenium-test-agents/: README.md  index.js  package.json
selenium_mcp/: __init__.py  context.py  server.py  tool_base.py
selenium_mcp/tools/: __init__.py  agents.py  analyzer.py  common.py  console.py  dialogs.py  drag.py  files.py  javascript.py  (+16 more)
tesat/: package-lock.json  package.json
test-plans/: comprehensive_test_plan.md  enhanced_test_plan_practiceautomatedtesting.md  practiceautomatedtesting_comprehensive_test_plan.md  shopping_filter_test_plan.md  shopping_workflow_comprehensive_test_plan.md
tests/: login_test.robot
tools/: example-suggestions.json  regression-suite-editor.html
(+68 files in other folders)
