[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-selenium"
version = "1.1.0"
description = "AI-powered Selenium browser automation MCP server with test agents (Planner, Generator, Healer)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "R. van der Horst", email = "r.vanderhorst@example.com"}
]
keywords = [
    "selenium",
    "mcp",
    "model-context-protocol",
    "browser-automation",
    "testing",
    "test-automation",
    "ai-agents",
    "playwright-alternative",
    "web-testing",
    "test-generator",
    "test-healer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Robot Framework",
]

dependencies = [
    "fastmcp>=2.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
robot = [
    "robotframework>=6.0",
    "robotframework-seleniumlibrary>=6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
all = [
    "robotframework>=6.0",
    "robotframework-seleniumlibrary>=6.0",
]

[project.scripts]
selenium-mcp = "selenium_mcp.server:main"

[project.urls]
Homepage = "https://github.com/learn-automated-testing/selenium-mcp-server"
Documentation = "https://github.com/learn-automated-testing/selenium-mcp-server#readme"
Repository = "https://github.com/learn-automated-testing/selenium-mcp-server"
"Bug Tracker" = "https://github.com/learn-automated-testing/selenium-mcp-server/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "*.tests*", "tests.*"]

[tool.setuptools.package-data]
"*" = ["agents/*.md"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
